syntax = "proto3";

option csharp_namespace = "HospitalManagementProject";
import "Protos/greet.proto";

service Userer {
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc Register(RegisterRequest) returns (RegisterResponse);
	rpc AdminRegister(RegisterRequest) returns (RegisterResponse);
	rpc DoctorRegister(DoctorRegisterRequest) returns (DoctorRegisterResponse);
	 rpc SayHello (HelloRequest) returns (HelloReply);
}




message LoginRequest {
  string email = 1;
  string password = 2;
}

// The response message containing the greetings.
message LoginResponse {
  string token = 1;
  string message = 2;
  bool is_success = 3;
}

message RegisterRequest{
	string email = 1;
	string password = 2;
	string username = 3;
}

message RegisterResponse {
	string email = 1;
	string password = 2;
	string username = 3;
	bool is_success = 4;
	string message = 5;
}

message DoctorRegisterRequest{
	string email = 1;
	string password = 2;
	string username = 3;
	string qualification = 4;
	string experience = 5;
}

message DoctorRegisterResponse {
	string email = 1;
	string password = 2;
	string username = 3;
	string qualification = 4;
	string experience = 5;
	bool is_success = 6;
	string message = 7;
}

